# rust_voxel_engine

./: .gitignore  Cargo.toml  README.md
src/: blit.wgsl  block.rs  camera.rs  chunk.frag  chunk.rs  chunk.vert  chunk.wgsl  chunk_loader.rs  chunk_map.rs  chunk_mesh.wgsl  chunk_renderer.rs  chunkf.spv  chunkv.spv  compileshader.bat  dummy.wgsl  fragment.glsl  fragment.spv  inputs.rs  main.rs  mesh.rs  mesh_builder.rs  mipmap.rs  mipmap.wgsl  occlusion.frag  occlusion.vert  occlusion.wgsl  occlusion_collect.comp  occlusion_collect.spv  occlusion_collect.wgsl  occlusionf.spv  occlusionv.spv  region.rs  render_region.rs  renderer.rs  scan.wgsl  shader.wgsl  texture.rs  todo.txt  vertex.glsl  vertex.spv  (+1 more)
src/util/: direction.rs  mod.rs  threadpool.rs
