[package]
name = "rust_test"
version = "0.1.0"
authors = ["pwouik"]
edition = "2018"
resolver="2"

[dependencies]
profiling = "1.0"
noise = "0.8"
anyhow = "1.0"
image = "0.24"
winit = "0.28"
glam = "0.24"
env_logger = "0.10.0"
log = "0.4"
wgpu = { path="../wgpu/wgpu" }
#wgpu-types = {path="../wgpu/wgpu-types"}
futures = "0.3"
renderdoc = "0.11"
bytemuck = { version = "1.14", features = [ "derive" ] }
crossbeam-channel = "0.5"
lz4_flex = "0.11"

[features]
default = ["profiling/profile-with-tracy"]

