[package]
name = "rust_voxel_engine"
version = "0.1.0"
authors = ["pwouik"]
edition = "2018"
resolver="2"

[dependencies]
profiling = "1.0"
anyhow = "1.0"
image = "0.24"
winit = "0.29"
glam = "0.24"
env_logger = "0.10.0"
log = "0.4"
wgpu = { git="https://github.com/gfx-rs/wgpu", rev = "e78e9dd4000635883584f7ce1e297fe2618d8f16" }
futures = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
crossbeam-channel = "0.5"
simdnoise = "3.1"
ahash = "0.8"

[features]
profile-with-tracy = ["profiling/profile-with-tracy"]

